created database models and API endpoints

--- a/plant_growth.ipynb
+++ b/plant_growth.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 1,
    "id": "e55c1d91",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 2,
    "id": "a7317f43",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 3,
    "id": "80a745db",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 4,
    "id": "34fa0fde",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 5,
    "id": "773a3125",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 6,
    "id": "b7464d3c",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 7,
    "id": "c36230eb",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
        "Text(0.5, 1.0, 'Correlation Heatmap')"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 8,
    "id": "c3ad192c",
    "metadata": {},
    "outputs": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 9,
    "id": "2a69cee3",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 10,
    "id": "0857ed46",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 11,
    "id": "0cec52d6",
    "metadata": {},
    "outputs": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 12,
    "id": "e81005f1",
    "metadata": {},
    "outputs": [],
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 13,
    "id": "1e8aa624",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
      "output_type": "stream",
      "text": [
       "Fitting 30 folds for each of 50 candidates, totalling 1500 fits\n",
-      "Best Hyperparameters: {'n_estimators': 300, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_depth': 20, 'bootstrap': False}\n"
+      "Best Hyperparameters: {'n_estimators': 300, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_depth': None, 'bootstrap': False}\n"
      ]
     }
    ],
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": null,
    "id": "930ef873",
    "metadata": {},
    "outputs": [
@@ -421,10 +421,10 @@
     {
      "data": {
       "text/plain": [
-       "['plant_growth.pkl']"
+       "['tabular_data/model_columns.pkl']"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +440,7 @@
     "print(\"\\n Accuracy:\", accuracy_score(y_test, y_pred))\n",
     "\n",
     "# save model\n",
-    "joblib.dump(best_rf, 'plant_growth.pkl')"
+    "joblib.dump(best_rf, 'tabular_data/plant_growth.pkl')"
    ]
   }
  ],
